Super hot. Super hot

--- a/src/main/frontend/components/preview.scss
+++ b/src/main/frontend/components/preview.scss
@@ -1,6 +1,8 @@
 .Tasitc-Cli-Preview {
   position: relative;
   width: 80%;
+  height: 20vh;
+  overflow: auto;
   margin: 0px 0px 0px calc(50vw - 40%);
 
   padding-top: 10px;
