--- a/src/main/frontend/components/cli.scss
+++ b/src/main/frontend/components/cli.scss
@@ -7,18 +7,8 @@
   &-Failed {
     color: red;
   }
-  &-Preview-Html {
-    position: relative;
-    width: 80%;
-    margin: 0px 0px 0px calc(50vw - 40%);
-
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 2px;
-    padding-right: 2px;
-
-    border-left: 1px solid #ccc;
-    border-right: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
+  &-Result {
+    position: absolute;
+    z-index: -1;
   }
 }
