And then the guy said: wtf wtf wtf?

--- a/src/delete/delete.scss
+++ b/src/delete/delete.scss
@@ -105,3 +105,11 @@ pre {
     animation: cursor 1s infinite;
   }
 }
+
+.tooltip {
+  position: absolute;
+  border: 1px solid;
+  margin-top: 1.5em;
+  background-color: $white;
+  color: $foreground;
+}
